--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=bloggingplatformAPI
+server.port=8080
+spring.data.mongodb.uri=mongodb://localhost:27017/blogging_platform_API
